<?xml version='1.0' encoding='UTF-8'?>
<resources>
    <string name="geo_location_accuracy_default">Accuracy: unknown</string>
    <string name="geo_location_accuracy">Accuracy: %1$s m</string>
    <string name="nocardspacetitle">No Storage Space</string>
    <string name="lowcardspacetitle">Low Storage Space</string>
    <string name="nocardspacedialog">The SD card on this device is full and you can no longer collect data. You must clear space on the SD card in order to continue.</string>
    <string name="lowcardspacedialog">You have %%% MB of storage space left on this device\'s SD card. Once the SD card is full, you will no longer be able to collect data.</string>
    <string name="getgeo">Capture Location</string>
    <string name="updategeo">Recapture Location</string>
    <string name="lat">Lat</string>
    <string name="lon">Lon</string>
    <string name="elevation">Height</string>
    <string name="submitbutton">Submit</string>
    <string name="geodialog">Please enable location settings</string>
    <string name="settings">Settings</string>
    <string name="preferences_general_section">General</string>
    <string name="aboutlabel">About</string>
    <string name="otherinstructions">Please enter a description</string>
    <string name="deleteresponse">Delete Response</string>
    <string name="othertext">Other...</string>
    <string name="surveylanglabel">Survey Languages</string>
    <string name="scanbarcode">Scan Barcode</string>
    <string name="toosmallerr">Value is too small. Minimum value: </string>
    <string name="toolargeerr">Value is too large. Maximum value: </string>
    <string name="baddatatypeerr">Answer must be numeric</string>
    <string name="reloadsurveyslabel">Reload all surveys</string>
    <string name="reloadsurveysdesc">Deletes and re-downloads assigned surveys (only run if instructed)</string>
    <string name="conftitle">Please Confirm</string>
...
    <string name="downloadsurveylabel">Download Form</string>
    <string name="downloadsurveyinstr">Enter the form id you wish to download.</string>
    <string name="deletealldatawarning">This will permanently delete all data (surveys, responses, images, and users) on the device. This operation is not reversible. Click OK to proceed or cancel to abort.</string>
    <string name="delete_responses_warning">This will permanently delete responses, images, and zip files on the device. This operation is not reversible. Click OK to proceed or cancel to abort.</string>
    <string name="unsentdatawarning">Some responses are not submitted. Make sure you export them before deletion. This operation is not reversible. Click OK to proceed or cancel to abort.</string>
    <string name="deleteonewarning">This will permanently delete this survey response. Click OK to proceed or cancel to abort.</string>
    <string name="nextbutton">Next</string>
    <string name="cleartitle">Clear Survey Answers</string>
    <string name="cleardesc">Are you sure you want to clear your responses?</string>
    <string name="clearquestion">Clear Response</string>
    <string name="clearquestiondesc">Do you want to clear the response to this question?</string>
    <string name="identlabel">Device Identifier</string>
    <string name="bootstrapstart">Loading survey data from SD card</string>
...
    <string name="transstartdate">Started:</string>
    <string name="transenddate">Finished:</string>
    <string name="resetalldesc">Permanently deletes all surveys, responses (including images and exported zip files) and users</string>
    <string name="reset_responses_desc">Permanently deletes all survey responses (including images and exported zip files)</string>
    <string name="checksd">Available storage</string>
    <string name="sdmissing">SD card missing or unmounted. Ensure that you have turned off \"USB File Copying\"</string>
    <string name="pickdate">Select Date</string>
    <string name="pleasewaitforbootstrap">Please wait until the bootstrap file has finished processing.</string>
    <string name="clear_data_success">Data successfully deleted from the device</string>
    <string name="clear_data_error">Error deleting data from the device</string>
    <string name="search">Search</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
...
    <string name="more">More</string>
    <!--Search-->
    <string name="search_hint">Search Data Point</string>
    <!--Project List (Survey Group) Activity-->
    <string name="delete_survey_dialog_message">Delete %1$s?</string>
    <!--Survey Activity-->
    <string name="error_responses">Some responses contain errors. You must review the following questions before you can submit:</string>
    <string name="error_question_mandatory">This response is required</string>
    <string name="repeat_answer">Please, repeat answer</string>
    <string name="error_answer_match">Answers do not match</string>
    <string name="error_img_preview">Can\'t load image preview</string>
    <string name="error_video_preview">Can\'t load video preview</string>
    <string name="caddisfly_test">Go to test</string>
    <string name="error_empty_form">Empty forms cannot be submitted. Please, add the corresponding responses first.</string>
    <string name="select">please select</string>
    <string name="clear_value_msg">Do you want to delete this value?</string>
    <string name="type_code">type code</string>
    <string name="or">or</string>
    <string name="capture_shape">capture shape</string>
    <string name="edit_shape">edit shape</string>
    <string name="view_shape">view shape</string>
    <string name="delete_point_title">Delete point?</string>
    <string name="delete_shape_title">Delete shape?</string>
    <string name="repeat_group">Repeat group</string>

    <string name="view_map">View map</string>
    <string name="delete_group_title">Delete group</string>
    <string name="delete_group_text">Do you want to delete this group?</string>
    <string name="add_signature">Add signature</string>
    <string name="modify_signature">Edit signature</string>
    <string name="signed_by">Signed by:</string>
    <string name="signature_terms">I understand this is an electronic representation of my signature</string>
    <string name="image_location_unknown">Geolocation unknown</string>
    <string name="image_location_reading">Reading geolocation</string>
    <string name="image_location_saved">Geolocation saved</string>
...
